@@ -1,3 +1,5 @@
+  - Convert extracted dateline to iso8601 format (pts)
+
 v0.24.0 2020-06-29T08:46:10+0800
   - Convert extracted dateline to iso8601 format (peopo, fountmedia)
   - Improve the extraction of journalist names on SETN
